# Phantom-Files

./: .gitignore  LICENSE  Makefile  README.md  README_ru.md  manual_check.py  pyproject.toml
config/: logging.yaml  phantom.yaml  traps_manifest.yaml
resources/templates/: aws_credentials.txt.j2  env.prod.j2  prod_db_config.json.j2  vpn_client.ovpn.j2
src/phantom/: main.py
src/phantom/factory/: generators.py  manager.py  metadata.py
